2009-08-12  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_socket.cc (fhandler_socket::accept): Always use local
	sockaddr_storage to store peer address and copy over to incoming
	peer address if available.  Truncate data as necessary according
	to POSIX.

2009-08-11  Corinna Vinschen  <corinna@vinschen.de>

	* include/limits.h (NGROUPS_MAX): Set to a more sane value.
	* include/sys/param.h (NGROUPS): Ditto.

2009-08-10  Corinna Vinschen  <corinna@vinschen.de>

	* spawn.cc (av::fixup): Check shell scripts for executability only on
	filesystems/mounts supporting real permissions.

2009-08-10  Corinna Vinschen  <corinna@vinschen.de>

	* dtable.cc (DEV_SOCKET): New static WCHAR string.  Name of
	the native NT socket device.
	(dtable::init_std_file_from_handle): Remove unused tmp_pathbuf
	variable.  Move check for sockets into FILE_TYPE_PIPE clause.
	Rely on handle_to_fn having recognized socket, or check if
	getsockopt works to accommodate NT4 shortcoming.
	(handle_to_fn): Use tmp_pathbuf for OBJECT_NAME_INFORMATION
	buffer and simplify code due to that.  Check name returned by
	NtQueryObject for socket device.

2009-08-10  Christopher Faylor  <me+cygwin@cgf.cx>

	* fhandler_console.cc (create_invisible_console_workaround): Fix size
	of cmd in the way originally intended.

2009-08-10  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_console.cc (create_invisible_console_workaround):  Fix
	size of cmd to take spaces into account.

2009-08-08  Corinna Vinschen  <corinna@vinschen.de>

	* dtable.cc (dtable::init_std_file_from_handle): Fix comment to
	document change in the Windows 7 workaround.
	* wincap.cc (wincapc::init): Don't set has_console_handle_problem
	to false on 32 bit systems.

2009-08-06  Corinna Vinschen  <corinna@vinschen.de>

	* net.cc (cygwin_getnameinfo): Force setting NI_NUMERICSERV only
	on Windows 2003 and earlier, only if the port number doesn't
	resolve to a well-known service.  Change comment accordingly.
